tests/snapshots/snapshots__all_tasks_100x30.snap
---
source: tests/snapshots.rs
expression: "harness.screen(width, height)"
---
 Snapshot Board   Board · All tasks

  Columns              Backlog  3
                       ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
 ▌ Backlog         3
   In Progress     2   ▌ Write the README                     ▎ Record a demo
   Done            2   ▌ Cover install, usage, keys and th…   ▎ Commit the .tape file too.
                       ▌ ◷ 1d ago                             ▎ ◷ 3d ago

                       ▎ Package release binaries
                       ▎ ◷ Aug 20

                       In Progress  2
                       ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔

                       ▎ Calmer card style                    ▎ Command table
                       ▎ Tiles with an accent bar.            ▎ Every keybinding defined once.
                       ▎ ◷ 12m ago                            ▎ ◷ 1h ago

                       Done  2
                       ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔

                       ▎ Set up CI                            ▎ Snapshot tests
                       ▎ fmt, clippy and tests.               ▎ ◷ 1d ago
                       ▎ ◷ 5h ago                             ▎




 ALL TASKS   ● saved   Tab rail   j/k row   h/l card   [/] column   v view   n/N new   Enter open
