tests/snapshots/snapshots__all_tasks_60x20.snap
---
source: tests/snapshots.rs
expression: "harness.screen(width, height)"
---
 TUI KANBAN   Snapshot Board                         saved
Backlog  3 tasks
╭──────────────────────────────────────────────────────────╮
│Write the README                                          │
│                                                          │
│Cover install, usage, keys and the file format.           │
│ Backlog  •  updated 1d                                   │
╰──────────────────────────────────────────────────────────╯

╭──────────────────────────────────────────────────────────╮
│Record a demo                                             │
│                                                          │
│Commit the .tape file too.                                │
│ Backlog  •  updated 3d                                   │
╰──────────────────────────────────────────────────────────╯

╭──────────────────────────────────────────────────────────╮
│Package release binaries                                  │
│                                                          │
 j/k card  •  h/l column  •  v view  •  n new ─────────────╯
