tests/snapshots/snapshots__board_100x30.snap
---
source: tests/snapshots.rs
expression: "harness.screen(width, height)"
---
 TUI KANBAN   Snapshot Board   [BOARD]                                                       saved
 COLUMNS           │╭──────────────────────────────────────────────────────────────────────────────╮
                    │ Backlog  3                                                                   │
 ▌ Backlog 3        │╭────────────────────────────────────────────────────────────────────────────╮│
   In Prog…2        ││Write the README                                                            ││
   Done    2        ││                                                                            ││
                    ││Cover install, usage, keys and the file format.                             ││
                    ││ Backlog  •  updated 1d                                                     ││
                    │╰────────────────────────────────────────────────────────────────────────────╯│
                    │╭────────────────────────────────────────────────────────────────────────────╮│
                    ││Record a demo                                                               ││
                    ││                                                                            ││
                    ││Commit the .tape file too.                                                  ││
                    ││ Backlog  •  updated 3d                                                     ││
                    │╰────────────────────────────────────────────────────────────────────────────╯│
                    │╭────────────────────────────────────────────────────────────────────────────╮│
                    ││Package release binaries                                                    ││
                    ││                                                                            ││
                    ││No description                                                              ││
                    ││ Backlog  •  updated 9d                                                     ││
                    │╰────────────────────────────────────────────────────────────────────────────╯│
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    ╰──────────────────────────────────────────────────────────────────────────────╯
 tab rail  •  v view  •  hjkl move  •  n new  •  e edit  •  ? help
