tests/snapshots/snapshots__board_160x45.snap
---
source: tests/snapshots.rs
expression: "harness.screen(width, height)"
---
 Snapshot Board   Board · All tasks

  Columns              Backlog  3                                    In Progress  2                                Done  2
                       ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔  ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔  ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
 ▌ Backlog         3
   In Progress     2   ▌ Write the README                            ▎ Calmer card style                           ▎ Set up CI
   Done            2   ▌ Cover install, usage, keys and the file …   ▎ Tiles with an accent bar.                   ▎ fmt, clippy and tests.
                       ▌ ◷ 1d ago                                    ▎ ◷ 12m ago                                   ▎ ◷ 5h ago

                       ▎ Record a demo                               ▎ Command table                               ▎ Snapshot tests
                       ▎ Commit the .tape file too.                  ▎ Every keybinding defined once.              ▎ ◷ 1d ago
                       ▎ ◷ 3d ago                                    ▎ ◷ 1h ago

                       ▎ Package release binaries
                       ▎ ◷ Aug 20





























 BOARD   ● saved   Tab rail   j/k card   h/l column   v view   n new   Enter open   e edit   H/L move   d delete   / search   ? help
