tests/snapshots/snapshots__board_switcher_60x20.snap
---
source: tests/snapshots.rs
expression: "harness.screen(60, 20)"
---
 Snapshot Board   Board · All tasks

 Backlog 3 · In Progress 2 · Done 2
 ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔

 ▌ Write the README
 ╭ Boards ────────────────────────────────────────────────╮
 │                                                        │
 │ ● Snapshot Board  7 tasks · ~/src/tui-kanban           │
 │▌  Website         12 tasks · ~/src/website             │
 │   Personal        new · ~/.local/share/tui-kanban/boa… │
 │                                                        │
 │ Enter open   j/k choose   Esc cancel                   │
 ╰────────────────────────────────────────────────────────╯
 ▎ ◷ Aug 20




 BOARDS   ● saved   Enter open   j/k choose   Esc cancel
