tests/snapshots/snapshots__column_colours_100x30.snap
---
source: tests/snapshots.rs
expression: "harness.screen(100, 30)"
---
 Snapshot Board   Board · All tasks

  Columns              Backlog  3                           In Progress  2/2                     2
                       ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔  ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔  ▔▔▔
   Backlog         3
 ▌ In Progress   2/2   ▎ Write╭ Colour for In Progress ──────────────╮ard style                  D
   Done          2/1   ▎ Cover│                                      │th an accent bar.          o
                       ▎ ◷ 1d │▌■ Automatic  current                 │o                          n
                              │ ■ rosewater                          │                           e
                       ▎ Recor│ ■ flamingo                           │table
                       ▎ Commi│ ■ pink                               │ybinding defined once.
                       ▎ ◷ 3d │ ■ mauve                              │
                              │ ■ red                                │
                       ▎ Packa│ ■ maroon                             │
                       ▎ ◷ Aug│ ■ peach                              │
                              │ ■ yellow                             │
                              │ ■ green                              │
                              │ ■ teal                               │
                              │ ■ sky                                │
                              │ ■ sapphire                           │
                              │ ■ blue                               │
                              │ ■ lavender                           │
                              │                                      │
                              │ Enter pick   j/k choose   Esc cancel │
                              ╰──────────────────────────────────────╯




 COLOUR   ● saved   Enter pick   j/k choose   Esc cancel
