tests/snapshots/snapshots__confirm_discard_100x30.snap
---
source: tests/snapshots.rs
expression: "harness.screen(100, 30)"
---
 Snapshot Board   Board · All tasks

  Columns              Backlog  3                In Progress  2            Done  2
                       ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔  ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔  ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
 ▌ Backlog         3
   In Progress╭ Edit task ───────────────────────────────────────────────────────────╮
   Done       │                                                                      │py and test…
              │  Title                                                               │
              │  ▎ Write the README now                                              │
              │                                                                      │tests
              │  Description                                                         │
              │    Cover╭ Discard changes ─────────────────────────────────╮         │
              │         │                                                  │         │
              │         │  Discard your changes?                           │         │
              │         │  They can't be undone.                           │         │
              │         │                                                  │         │
              │         │  y discard   n keep editing                      │         │
              │         │                                                  │         │
              │         ╰──────────────────────────────────────────────────╯         │
              │                                                                      │
              │                                                                      │
              │                                                                      │
              │  Ctrl+S save   Tab switch field   Esc cancel                         │
              │                                                                      │
              ╰──────────────────────────────────────────────────────────────────────╯




 DISCARD   ● saved   y discard   n keep editing
